# AdaptiveAUTOSAR-Cpp17

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  main.cpp
CMake/CMakeConfig/: gcc11_linux_aarch64_debug.cmake  gcc11_linux_aarch64_release.cmake  gcc11_linux_x86_64_release.cmake  qcc12_qnx800_aarch64.cmake  qcc12_qnx800_aarch64_debug.cmake  qcc12_qnx800_aarch64_release.cmake  qcc12_qnx800_x86_64_debug.cmake  qcc12_qnx800_x86_64_release.cmake
CMake/Toolchain/: qcc12_qnx800_aarch64_debug.cmake
CMake/Toolchain/CMakeLogging/: tool_chain_log_config.cmake
components/open-aa-example-apps/: CMakeLists.txt
components/open-aa-example-apps/demo/: CMakeLists.txt
components/open-aa-example-apps/demo/app/: CMakeLists.txt
components/open-aa-example-apps/demo/app/include/demo/manager/: demo_manager.h
components/open-aa-example-apps/demo/app/src/: main.cpp
components/open-aa-example-apps/demo/app/src/demo/manager/: demo_manager.cpp
components/open-aa-platform-os-abstraction-libs/: CMakeLists.txt
components/open-aa-platform-os-abstraction-libs/include/ara/os/interface/process/: process_factory.h  process_interaction.h
components/open-aa-platform-os-abstraction-libs/include/ara/os/linux/process/: process.h
components/open-aa-platform-os-abstraction-libs/include/ara/os/qnx/process/: process.h
components/open-aa-platform-os-abstraction-libs/src/: CMakeLists.txt
components/open-aa-platform-os-abstraction-libs/src/ara/os/interface/: CMakeLists.txt
components/open-aa-platform-os-abstraction-libs/src/ara/os/interface/process/: CMakeLists.txt  process_factory.cpp
components/open-aa-platform-os-abstraction-libs/src/ara/os/linux/: CMakeLists.txt
components/open-aa-platform-os-abstraction-libs/src/ara/os/linux/process/: CMakeLists.txt  process.cpp
components/open-aa-platform-os-abstraction-libs/src/ara/os/qnx/: CMakeLists.txt
components/open-aa-platform-os-abstraction-libs/src/ara/os/qnx/process/: CMakeLists.txt  process.cpp
components/open-aa-std-adaptive-autosar-libs/: CMakeLists.txt
components/open-aa-std-adaptive-autosar-libs/include/ara/core/: array.h
components/open-aa-std-adaptive-autosar-libs/include/ara/core/internal/: location_utils.h  violation_handler.h
components/open-aa-std-adaptive-autosar-libs/src/ara/core/internal/: violation_handler.cpp
tests/core_platform/: CMakeLists.txt  ara_core_array.cpp
