#[====================================================================]
# OpenAA: Open Source Adaptive AUTOSAR Project
# Author: Sherif Mohamed
#
# File description:
# -----------------
# CMake configuration for the open-aa-example-apps component.
#[====================================================================]

add_subdirectory(demo)